Fixed margin issue on sponsors' logos on small screens

--- a/_scss/_homepage.scss
+++ b/_scss/_homepage.scss
@@ -108,13 +108,24 @@
   text-align: center;
   margin-top: 5em;
 
+  @include small-screen {
+    display: flex;
+    flex-direction: column;
+
+  }
+
   a {
     text-decoration: none;
   }
 
   img {
     margin: 0 20px;
+    @include small-screen {
+      margin: 10px 0;
+    }
   }
+
+
 }
 
 #events, #jobs {
